[package]
name = "simplerusthttpsclient"
version = "0.1.6"
edition = "2021"

authors = ["Dario Caruso"]
description = "simple rust client with rust native tls"
license = "Apache-2.0"
documentation = "https://docs.rs/simplerusthttpsclient"
repository = "https://github.com/dottgonzo/simplerusthttpsclient"



[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls","json","multipart"] }
url = "2.4.1"
tokio = { version = "1.33.0", features = ["macros","fs","io-util"] }
rustls = { version = "0.21.8", features = [
    "dangerous_configuration",
    "secret_extraction",
] }
rustls-pemfile = "1.0.3"
anyhow = "1.0.75"
serde = { version = "1.0.190", features = ["derive", "rc"] }
tokio-util = "0.7.10"
zip = { version = "0.6.6", features = ["bzip2"] }
tar = "0.4.40"
flate2 = "1.0.28"
walkdir = "2.4.0"
tempfile = "3.8.1"

