[package]
name = "simplerusthttpsclient"
version = "0.1.20"
edition = "2021"

authors = ["Dario Caruso"]
description = "simple rust client with rust native tls"
license = "Apache-2.0"
documentation = "https://docs.rs/simplerusthttpsclient"
repository = "https://github.com/dottgonzo/simplerusthttpsclient"

[features]
tls = ["dep:rustls","dep:rustls-pemfile","reqwest/rustls-tls"]
async-fs = ["tokio/fs"]

default = ["tls","async-fs"]


[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["json","multipart"] }
url = { version = "2.4.1", default-features = false }
tokio = { version = "1.33.0", default-features = false, features = ["macros","io-util"] }
rustls = { version = "0.21.8", default-features = false, features = [
    "dangerous_configuration",
    "secret_extraction",
], optional = true }
rustls-pemfile = { version = "1.0.3", default-features = false, optional = true }
anyhow = { version = "1.0.75" }
serde = { version = "1.0.190", features = ["derive", "rc"] }
tokio-util ={ version = "0.7.10", default-features = false }
zip = { version = "0.6.6", default-features = false }
tar = { version = "0.4.40", default-features = false }
flate2 = { version = "1.0.28", default-features = false, features = ["rust_backend"] }
walkdir = { version = "2.4.0", default-features = false }
tempfile = { version = "3.8.1", default-features = false }


